// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail should render with a specific image 1`] = `
<div
  className="thumbnail undefined"
  style={
    Object {
      "backgroundImage": "url(\\"/static/thumbnails/dolphin.jpg\\")",
      "backgroundPosition": "center center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
      "paddingTop": "100%",
    }
  }
>
  <a
    className="badge clickable"
    href="https://www.douglas.adams"
    rel="noopener noreferrer"
    target="_blank"
    title="Image by Douglas Adams @ personal"
  >
    <span
      className="source-logo"
    >
      <img
        alt="personal"
        src="/static/svgs/download.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Douglas Adams
    </span>
  </a>
</div>
`;

exports[`Thumbnail should render with no photo 1`] = `
<div
  className="thumbnail undefined"
  style={
    Object {
      "backgroundImage": "url(\\"/static/thumbnails/default-03.jpg\\")",
      "backgroundPosition": "center center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
      "paddingTop": "100%",
    }
  }
>
  <a
    className="badge clickable"
    href="https://unsplash.com/@ilyapavlov?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
    rel="noopener noreferrer"
    target="_blank"
    title="Download free do whatever you want high-resolution photos from Ilya Pavlov"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/static/svgs/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Ilya Pavlov
    </span>
  </a>
</div>
`;

exports[`Thumbnail should render without attribution 1`] = `
<div
  className="thumbnail undefined"
  style={
    Object {
      "backgroundImage": "url(\\"/static/thumbnails/dolphin.jpg\\")",
      "backgroundPosition": "center center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
      "paddingTop": "100%",
    }
  }
>
  <a
    className="badge stagnant"
    rel="noopener noreferrer"
    target="_blank"
    title=""
  >
    <span
      className="source-logo"
    >
      <img
        src="/static/svgs/download.svg"
      />
    </span>
    <span
      className="attribute"
    />
  </a>
</div>
`;
